update manifest.json file

--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+    "homepage":"https://yuktimakwana.github.io/realestate.github.io/",
     "name": "real_estate_landing_page",
     "short_name": "real_estate_landing_page",
     "start_url": ".",
